# nli

./: .example.env  .gitignore  README.md  main.py  pyproject.toml
backend/: pyproject.toml
frontend/: package-lock.json  package.json
