[tool.poetry]
name = "nli"
version = "0.1.0"
description = ""
authors = ["Justin Kennedy <justin@justinkennedy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
